--- a/Frontend project/app.css
+++ b/Frontend project/app.css
@@ -22,7 +22,7 @@ body {
 
 .home-header nav {
   margin-left: auto;
-  padding-bottom: 70px;
+  /* padding-bottom: 70px; */
 }
 
 .home-header nav ul {
@@ -40,6 +40,11 @@ body {
 .home-header nav ul li a {
   text-decoration: none;
   color: white;
+  font-weight: bold;
+}
+
+.home-header nav ul li a:hover {
+  color: hotpink;
 }
 
 .login-popup {
@@ -69,4 +74,54 @@ body {
   right: 10px;
   cursor: pointer;
   font-size: 20px;
+}
+
+.offer-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none; /* Hidden by default */
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.offer-popup-content {
+  background-color: #414c55;
+  padding: 20px;
+  border-radius: 5px;
+  width: 400px;
+  text-align: center;
+  position: relative;
+}
+
+.offer-popup-content h1 {
+  color: white;
+  font-size: 24px;
+}
+
+.offer-popup-content p {
+  color: white;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.offer-popup form {
+  display: flex;
+  flex-direction: column;
+}
+
+.offer-popup input[type="email"] {
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.offer-popup button {
+  padding: 10px;
+  background-color: white;
+  border: none;
+  cursor: pointer;
 }
