--- a/Frontend project/app.css
+++ b/Frontend project/app.css
@@ -48,7 +48,7 @@ body {
   color: hotpink;
 }
 
-/*Login popup */
+/* Login popup */
 .login-popup {
   position: fixed;
   top: 0;
@@ -88,6 +88,22 @@ body {
   width: 100%;
   border-radius: 5px;
   border: 1px solid #ccc;
+  margin-bottom: 10px; /* Added to ensure spacing between input fields */
+}
+
+.login-popup-content .create-account-link {
+  margin-top: 20px; /* Add some space above the link */
+  text-align: center;
+}
+
+.login-popup-content .create-account-link a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.login-popup-content .create-account-link a:hover {
+  color: hotpink;
 }
 
 .login-popup-content button {
@@ -108,7 +124,7 @@ body {
   color: white;
 }
 
-/*Newsletter popup */
+/* Newsletter popup */
 .newsletterPopup {
   position: fixed;
   top: 0;
@@ -116,7 +132,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  display: none; /* Hidden by default */
+  display: none;
   justify-content: center;
   align-items: center;
   z-index: 1000;
@@ -150,6 +166,7 @@ body {
 .newsletterPopup input[type="email"] {
   padding: 10px;
   margin-bottom: 10px;
+  border-radius: 5px;
 }
 
 .newsletterPopup button {
@@ -159,7 +176,7 @@ body {
   cursor: pointer;
 }
 
-/*Search form */
+/* Search bar */
 .search-form {
   display: inline-block;
   margin-right: 20px;
@@ -197,7 +214,7 @@ body {
   border: none;
 }
 
-/*Media queries for responsiveness */
+/* Media queries for responsiveness */
 @media (max-width: 768px) {
   .home-header {
     flex-direction: column;
